<resources>
    <string name="app_name">UHFdemo</string>
    <string name="inventory">Inventory</string>
    <string name="read_write">Read and write</string>
    <string name="lock_tag">Lock</string>
    <string name="destory_tag">Destroy</string>
    <string name="settins">Settings</string>
    <string name="firmware_version">Firmware version</string>
    <string name="soft_version_name">Software version</string>
    <string name="temperature">Temperature</string>
    <string name="device_connect_failed">Device connection failed</string>
    <string name="device_not_connected">Device not connected</string>
    <string name="get_version_failed">Get failed</string>
    <string name="soft_version">Software version: V1.1.1</string>
    <string name="sound">Voice prompt</string>
    <string name="tag_num">Number of labels:</string>
    <string name="read_num">Read times:</string>
    <string name="ascii_char">Hexadecimal display</string>
    <string name="scann_start">Start scanning</string>
    <string name="scann_stop">Stop scanning</string>
    <string name="clear_card">Clear display</string>
    <string name="current_tem">Current Temperature:</string>
    <string name="area_name">Storage area</string>
    <string name="ruf_type">RESV</string>
    <string name="epc_type">EPC</string>
    <string name="tid_type">TID</string>
    <string name="usr_type">USER</string>
    <string name="password">Access password:</string>
    <string name="kill_password">Kill password：</string>
    <string name="default_pass">00000000</string>
    <string name="start_area">Start address(word)：</string>
    <string name="default_start_area">2</string>
    <string name="data_length">Data length(word)：</string>
    <string name="default_length">6</string>
    <string name="data_content">Data content：</string>
    <string name="data_type">Hexadecimal number</string>
    <string name="data_description">(Description: Hexadecimal input, such as AAAB,12141414)</string>
    <string name="read_data">Read data</string>
    <string name="write_data">Write data</string>
    <string name="read_failed">Read failed</string>
    <string name="read_suc">Read successfully</string>
    <string name="write_failed">Write failed</string>
    <string name="write_suc">Write successfully</string>
    <string name="lock_suc">Locked successfully</string>
    <string name="lock_failed">Lock failed</string>
    <string name="unlock_suc">Successfully unlocked</string>
    <string name="unlock_failed">Unlock failed</string>
    <string name="kill_suc">Destroyed successfully</string>
    <string name="kill_failed">Destruction failed</string>
    <string name="epc_data_name">EPC data:</string>
    <string name="lock">lock</string>
    <string name="unlock">unlock</string>
    <string name="store_area">Storage area:</string>
    <string name="default_lock_start">32</string>
    <string name="default_lock_length">96</string>
    <string name="data_length_bit">Data length(bit): </string>
    <string name="start_area_bit">Start address(bit): </string>
    <string name="lock_password_info">(The default password 00000000 is invalid)</string>
    <string name="get_status">Obtain</string>
    <string name="set_status">Set up</string>
    <string name="save">Save</string>
    <string name="get_sucess">Get Successful</string>
    <string name="get_failed">Get failed</string>
    <string name="set_sucess">Set successfully</string>
    <string name="set_failed">Setup failed</string>
    <string name="filter_sucess">Filtered successfully</string>
    <string name="filter_failed">Filter failed</string>
    <string name="clear_sucess">Cleared successfully</string>
    <string name="clear_failed">Cleanup failed</string>
    <string name="output_str">Output Power</string>
    <string name="power_str">power(dbm)：</string>
    <string name="frequence_str">Frequency band</string>
    <string name="region_str">Area:</string>
    <string name="work_mode">Operating mode:</string>
    <string name="work_time">Working and waiting time (unit ms):</string>
    <string name="session_str">Session：</string>
    <string name="inv_filter_str">Inventory filter:</string>
    <string name="address_bit">Address(bit)：</string>
    <string name="length_bit">Length(bit)：</string>
    <string name="tag_epc">Tag EPC：</string>
    <string name="firmware_upgrade">Firmware upgrade：</string>
    <string name="bin_file">bin file：</string>
    <string name="choose_str">Select</string>
    <string name="upgrade_str">Upgrade</string>
    <string name="fileter_clear_str">Clear</string>
    <string name="copy_sucess">Copy successfully</string>
    <string name="bin_file_name">Please select bin file</string>
    <string name="select_right_file">Please select the correct bin file！</string>
    <string name="passwork_null">Access password cannot be empty！</string>
    <string name="start_area_null">The start address cannot be empty！</string>
    <string name="length_null">Data length cannot be empty！</string>
    <string name="data_null">Data content cannot be empty！</string>
    <string name="work_time_null">Working hours cannot be empty！</string>
    <string name="wait_time_null">Waiting time cannot be empty！</string>
    <string name="set_time_succ">Time set successfully！</string>
    <string name="set_time_fail">Time setting failed！</string>
    <string name="get_time_succ">Get time succeeded！</string>
    <string name="get_time_fail">Failed to get time！</string>
    <string name="not_get_storage_permission">Please get storage permission first！</string>
    <string name="update_success">update successed！</string>
    <string name="update_failed">Upgrade failed！</string>
    <string name="update_error">Upgrade error！</string>
    <string name="start_search">Start searching</string>
    <string name="stop_search">Stop search</string>
    <string name="current_search_tag">Current identification tag</string>
    <string name="export_inventory">Export</string>
    <string name="number_str">Number</string>
    <string name="tag_str">Tag EPC</string>
    <string name="recognition_times_str">Times</string>
    <string name="operating_time_str">operating:</string>
    <string name="wait_time_str">wait:</string>
</resources>
