<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/area_name" />

        <RadioGroup
            android:id="@+id/rg_areas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <RadioButton
                android:id="@+id/rb_ruf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ruf_type" />

            <RadioButton
                android:id="@+id/rb_epc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/epc_type" />

            <RadioButton
                android:id="@+id/rb_tid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tid_type" />

            <RadioButton
                android:id="@+id/rb_usr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/usr_type" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:maxLength="8"
            android:hint="@string/data_type"
            android:digits="0123456789ABCDEF"
            android:inputType="textCapCharacters|textNoSuggestions"
            android:text="@string/default_pass" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_area" />

        <EditText
            android:id="@+id/et_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:maxLength="4"
            android:text="@string/default_start_area" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/data_length" />

        <EditText
            android:id="@+id/et_length"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:maxLength="4"
            android:text="@string/default_length" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/data_content" />

        <EditText
            android:id="@+id/et_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="24"
            android:hint="@string/data_type"
            android:digits="0123456789ABCDEF"
            android:inputType="textCapCharacters|textNoSuggestions"
            android:maxLength="24" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/data_description"
        android:textColor="@color/red" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:id="@+id/read_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:gravity="center"
            android:text="@string/read_data"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/write_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:gravity="center"
            android:text="@string/write_data"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>
</LinearLayout>