<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@drawable/setting_item_background"
        android:orientation="vertical"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/inv_filter_str" />

            <CheckBox
                android:id="@+id/filter_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="180dp"
                android:text="@string/save" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="18dp"
                android:text="@string/address_bit" />

            <EditText
                android:id="@+id/et_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="6"
                android:inputType="number"
                android:maxLength="4"
                android:text="@string/default_lock_start" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="18dp"
                android:text="@string/length_bit" />

            <EditText
                android:id="@+id/et_length"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="6"
                android:inputType="number"
                android:maxLength="4"
                android:text="@string/default_lock_length" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tag_epc" />

            <EditText
                android:id="@+id/et_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:digits="0123456789ABCDEF"
                android:ems="24"
                android:hint="@string/data_type"
                android:inputType="textCapCharacters|textNoSuggestions"
                android:maxLength="24" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:id="@+id/filter_set"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:background="@drawable/settings_button_background"
                android:gravity="center"
                android:text="@string/set_status"
                android:textColor="@color/reall_black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/filter_clear"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@drawable/settings_button_background"
                android:gravity="center"
                android:text="@string/fileter_clear_str"
                android:textColor="@color/reall_black"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_margin="10dp"
        android:id="@+id/tv_SearchTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_search_tag" />

    <ProgressBar
        android:id="@+id/pb_Search"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:max="50" />

    <TextView
        android:id="@+id/search_tag"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:background="@drawable/settings_button_background"
        android:gravity="center"
        android:text="@string/start_search"
        android:textColor="@color/reall_black"
        android:textSize="18sp" />
</LinearLayout>